--- a/layouts/partials/general/fallback-text.html
+++ b/layouts/partials/general/fallback-text.html
@@ -2,6 +2,6 @@
   {{- with .Site.Params.fallback_text -}}
   {{- . -}}
   {{- else -}}
-  No content available yet. Coming soon.
+  Il n'y a rien à voir ici, circulez !
   {{- end -}}
 </p>
