--- a/layouts/partials/posts/post-meta.html
+++ b/layouts/partials/posts/post-meta.html
@@ -1,6 +1,6 @@
 <div class="post-list-dates">
   {{- if not (eq .Lastmod .Date) -}}
-    Posted:
+    Posté le :
   {{ end -}}
   {{- if not .PublishDate.IsZero -}}
     {{- .PublishDate.Format "Jan 2, 2006" -}}
@@ -9,7 +9,7 @@
   {{- end -}}
   {{- if not (eq .Lastmod .Date) -}}
     &nbsp;&middot;&nbsp;
-    Updated: {{ .Lastmod.Format "Jan 2, 2006" -}}
+    Mis à jour le : {{ .Lastmod.Format "Jan 2, 2006" -}}
   {{- end -}}
   &nbsp;&middot;&nbsp;
-  {{- .ReadingTime }} min.</div>
+  {{- .ReadingTime }} min de lecture.</div>
