--- a/layouts/partials/posts/social-share.html
+++ b/layouts/partials/posts/social-share.html
@@ -5,7 +5,7 @@
   {{ $body := print $title ", by " .Site.Title "\n" .Params.description "\n\n" $url "\n" }}
 
   <section>
-    <h2>Share</h2>
+    <h2>Partagez</h2>
     <div class="social-links">
       <ul class="social-icons--share">
         <!-- Twitter -->
