--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
   <article class="error-404 container">
     <div>
-      <h1>Page Not Found!</h1>
-      <p>The page you requested could not be found.</p>
-      <a class="btn-secondary" href="{{ "/" | relURL }}">&lsaquo; Return Home</a>
+      <h1>404 "Page Not Found!"</h1>
+      <p>La page que vous recherchez n'existe pas.</p>
+      <a class="btn-secondary" href="{{ "/" | relURL }}">&lsaquo; Retour à l'accueil</a>
     </div>
   </article>
 {{ end }}
