--- a/layouts/partials/posts/related.html
+++ b/layouts/partials/posts/related.html
@@ -3,7 +3,7 @@
   {{ $related := .Site.RegularPages.Related . | first 5 }}
   {{ with $related }}
     <section class="related">
-      <h2>See Also</h2>
+      <h2>Voir aussi</h2>
       <ul class="related-posts">
         {{ range . }}
           <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
