--- a/layouts/shortcodes/projets.html
+++ b/layouts/shortcodes/projets.html
@@ -7,7 +7,7 @@
         Les projets
       {{- end -}}
     </h2>
-    <a class="see-more-projects" href="{{ "projects/" | relURL }}">Tout voir &raquo;</a>
+    <a class="see-more-projects" href="{{ "projets/" | relURL }}">Tout voir &raquo;</a>
   </div>
   {{ $num := .Get 0 }}
   {{ if not $num }}
