--- a/assets/custom.css
+++ b/assets/custom.css
@@ -3,11 +3,11 @@
 #js-navbar .logo{
     font-size: xx-large;
 }
-#js-navbar .logo-bar{
+/* #js-navbar .logo-bar{
     width: 100%;
     height: 1px;
     border-bottom: 3px solid var(--color-primary);
-}
+} */
 
 .single-feature-img img{
     margin: auto;
@@ -23,7 +23,94 @@
 }
 
 .caroussel-img{
-    height: 250px;
-    width: 500px;
+    height: 15rem;
     margin: 0 10px;
+}
+.caroussel-img:hover{
+    filter:brightness(150%);
+}
+
+.caroussel-img:focus{
+    scale: 150%;
+}
+
+.creator-list{
+    margin: 0 10em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 100%;
+}
+
+.creator-entry{
+    width: 10em;
+    height: 16em;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.creator-entry-img img{
+    border-radius: 50%;
+    margin: 10px;
+    width: 10em;
+    height: 10em;
+    object-fit: cover;
+}
+
+.creator-single-img{
+display: flex;
+}
+.creator-single-img img{
+    border-radius: 50%;
+    margin: auto;
+    width: 20em;
+    height: 20em;
+    object-fit: cover;
+}
+.creator-list-summary{
+    font-size: small;
+}
+
+.creator-entry-title{
+    margin: 5px auto;
+    text-align: center;
+}
+
+.creator-projects{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+a{
+    position:relative;
+}
+a:hover{
+    
+    text-decoration: none;
+}
+a:not(.menu-link):not(.btn-primary):not(.btn-secondary)::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    border-radius: 1px;
+    background-color: var(--color-primary);
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+  }
+  
+  a:not(.menu-link):not(.btn-primary):not(.btn-secondary):hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
+
+.discordLink {
+    display: flex;
+    justify-content: center;
+    margin: auto;
 }
