--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -11,5 +11,11 @@
   <article class="single-container markdown">
     {{ .Content }}
   </article>
+  <div class="creator-list">
+  {{ range (where .Site.RegularPages "Section" "createurs") }} 
+  {{partial "creators/creator-entry.html" .}}
+  
+  {{end}}
+  </div>
 </div>
 {{ end }}
