--- a/layouts/partials/footer/newsletter.html
+++ b/layouts/partials/footer/newsletter.html
@@ -1,5 +1,5 @@
 <!-- Reusable template for a newsletter opt-in -->
-<section class="section">
+<!-- <section class="section">
   <div class="container--sm">
     <h2 class="newsletter-header">
       {{- with .Site.Params.newsletter_header -}}
@@ -26,4 +26,4 @@
       </button>
     </form>
   </div>
-</section>
+</section> -->
