--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,6 +24,7 @@
 
 // 5. Components
 @import
+  'components/scroll',
   'components/switch-theme',
   'components/socials',
   'components/buttons',
