decap cms config

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -2,6 +2,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {{ partial "head/resource-hints.html" . }}
   {{ partial "head/styles.html" . }}
   {{ partial "head/seo/seo.html" . }}
