--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,5 +13,16 @@
     </main>
     {{- partial "footer/footer.html" . -}}
     {{- partial "footer/scripts.html" . -}}
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
   </body>
 </html>
