--- a/layouts/partials/head/seo/seo.html
+++ b/layouts/partials/head/seo/seo.html
@@ -54,6 +54,8 @@
   <link rel="canonical" href="{{ .Permalink }}">
 {{ end -}}
 
+{{ partial "head/seo/opengraph.html" . }}
+{{ partial "head/seo/twitter-cards.html" . }}
 
 <!-- Add rss+xml functionality -->
 {{- with .OutputFormats.Get "rss" -}}
