--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode | default "en-US" }}">
+<html lang="{{ .Site.LanguageCode | default "fr-FR" }}">
   {{- partial "head/head.html" . -}}
   <body>
     {{ if and (not .Site.IsServer) (.Site.Params.gtm_id) }}
