--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -8,9 +8,11 @@
   border: 1px solid var(--color-primary);
   padding: 0.4rem 0.7rem;
   display: inline-block;
-  @include font-size('base');
+  border-radius: 4px;
+  transition: 0.3s ease-in-out all;
+  @include font-size("base");
 
-  @include respond-to('small') {
+  @include respond-to("small") {
     padding: 0.5rem 0.8rem;
   }
 
