--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -16,10 +16,10 @@
     cursor: pointer;
   }
 
-  @include respond-to('m-large') {
+  @include respond-to("m-large") {
     flex-direction: row; /* Horizontal nav on desktop */
     align-items: center;
-    padding: 0;
+    padding: 15px 0;
 
     .nav-toggle {
       display: none; /* Hide nav toggle on desktop */
@@ -28,7 +28,7 @@
 }
 
 .logo {
-  @include font-size('md');
+  @include font-size("md");
   font-weight: 700;
   text-decoration: none;
   width: fit-content;
@@ -67,6 +67,7 @@
     @extend .menu-item;
     align-self: center;
     margin-left: 20px;
+    cursor: pointer;
   }
 
   .menu-link {
@@ -77,6 +78,7 @@
     text-decoration: none;
     cursor: pointer;
     padding: 1.4rem 1rem;
+    transition: 0.3s ease-in-out all;
 
     &:hover {
       background-color: var(--color-primary);
@@ -88,17 +90,25 @@
     margin-left: 10px;
   }
 
-  @include respond-to('m-large') {
+  @include respond-to("m-large") {
     display: flex;
     flex-direction: row;
+    gap: 10px;
     border: none;
 
+    .menu-link {
+      padding: 1rem;
+      min-width: 5rem;
+      border-radius: 4px;
+      justify-content: center;
+    }
+
     .menu-item:hover {
-      .sub-menu {        
+      .sub-menu {
         background-color: var(--color-contrast-lower);
         padding-left: 0;
         display: block;
-        z-index: 1;        
+        z-index: 1;
       }
     }
   }
@@ -106,6 +116,7 @@
 
 .sub-menu {
   display: none;
+  border-radius: 4px;
 
   &--active {
     display: block;
@@ -114,12 +125,19 @@
 
   .menu-link {
     font-weight: initial;
+    justify-content: flex-start;
+
+    &:hover {
+      padding-left: calc(1rem + 3px);
+    }
   }
 
-  @include respond-to('m-large') {
+  @include respond-to("m-large") {
     display: none;
     position: absolute;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    min-width: 10rem;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+      rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 
     &--active {
       display: none;
