--- a/assets/scss/pages/_project-list.scss
+++ b/assets/scss/pages/_project-list.scss
@@ -12,8 +12,8 @@
 .project-entry {
   border: 1px solid var(--color-contrast-low);
   border-radius: 10px;
-  box-shadow: 0 0 20px -10px var(--color-contrast-low), 0 0 20px -10px var(--color-contrast-low);
-  max-width: 750px;
+  box-shadow: 0 0 20px -10px var(--color-contrast-low),
+    0 0 20px -10px var(--color-contrast-low);
 }
 
 .project-entry-img {
@@ -45,14 +45,14 @@
   border-top-right-radius: 10px;
 
   a {
-    @include font-size('sm');
+    @include font-size("sm");
   }
 }
 
 .project-entry-info {
   padding: 1.2rem;
 
-  @include respond-to('small') {
+  @include respond-to("small") {
     padding: 1.5rem;
   }
 }
@@ -60,7 +60,7 @@
 .project-entry-title {
   margin: 0;
   font-weight: 400;
-  
+
   a {
     color: var(--color-contrast-high);
 
