[SCSS] Small style update for project-entry cards

--- a/assets/scss/pages/_project-list.scss
+++ b/assets/scss/pages/_project-list.scss
@@ -12,8 +12,8 @@
 .project-entry {
   border: 1px solid var(--color-contrast-low);
   border-radius: 10px;
-  box-shadow: 0 0 20px -10px var(--color-contrast-low), 0 0 20px -10px var(--color-contrast-low);
-  max-width: 750px;
+  box-shadow: 0 0 10px -10px var(--color-contrast-low),
+    0 0 20px -10px var(--color-contrast-low);
 }
 
 .project-entry-img {
@@ -36,23 +36,23 @@
 
 .project-entry-type {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 5px;
+  right: 5px;
   padding: 0.2rem 0.4rem;
+  border-radius: 8px;
   background-color: var(--color-bg);
-  border-left: 1px solid var(--color-contrast-low);
-  border-bottom: 1px solid var(--color-contrast-low);
-  border-top-right-radius: 10px;
+  border: 1px solid var(--color-contrast-low);
+  line-height: 1rem;
 
   a {
-    @include font-size('sm');
+    @include font-size("sm");
   }
 }
 
 .project-entry-info {
   padding: 1.2rem;
 
-  @include respond-to('small') {
+  @include respond-to("small") {
     padding: 1.5rem;
   }
 }
@@ -60,7 +60,7 @@
 .project-entry-title {
   margin: 0;
   font-weight: 400;
-  
+
   a {
     color: var(--color-contrast-high);
 
