Contact page traduite

--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -6,11 +6,11 @@
 </div>
 <div class="contact">
   <div class="single-container markdown">{{ .Content }}</div>
-  <form id="contact-form" class="single-container" name="contact" method="POST" {{ with .Site.Params.netlify_forms }}data-netlify="{{ . }}"{{ end }}>
-    <input type="text" class="contact-form--input" name="name" placeholder="Your name..." title="Enter your name" required>
-    <input type="email" class="contact-form--input" name="email" placeholder="Your best email..." title="Enter your best email" required>
-    <textarea class="contact-form--textarea" name="message" placeholder="Your message..." title="Enter your message" required></textarea>
-    <button type="submit" id="contact-form--submit" class="btn-primary">Send</button>
+  <form id="contact-form" class="single-container" name="contact" method="POST">
+    <input type="text" class="contact-form--input" name="name" placeholder="Votre nom..." title="Votre nom" required>
+    <input type="email" class="contact-form--input" name="email" placeholder="Votre email favori..." title="Votre email favori" required>
+    <textarea class="contact-form--textarea" name="message" placeholder="Votre petit mot..." title="Votre petit mot" required></textarea>
+    <button type="submit" id="contact-form--submit" class="btn-primary">Envoyer</button>
   </form>
 </div>
 {{ end }}
