--- a/assets/custom.css
+++ b/assets/custom.css
@@ -37,10 +37,12 @@
     height: 15rem;
     margin: 0 10px;
     border-radius: 20px;
+    transition: .3s all ease-in-out;
 }
 
 .caroussel-img:hover {
     filter: brightness(150%);
+    border-radius: 4px;
 }
 
 .caroussel-img:focus {
@@ -107,7 +109,7 @@ a:hover {
     text-decoration: none;
 }
 
-a:not(.menu-link):not(.btn-primary):not(.btn-secondary)::before {
+a:not(.menu-link):not(.btn-primary):not(.btn-secondary)[class]::before {
     content: '';
     position: absolute;
     width: 100%;
@@ -121,7 +123,7 @@ a:not(.menu-link):not(.btn-primary):not(.btn-secondary)::before {
     transition: transform .3s ease-in-out;
 }
 
-a:not(.menu-link):not(.btn-primary):not(.btn-secondary):hover::before {
+a:not(.menu-link):not(.btn-primary):not(.btn-secondary)[class]:hover::before {
     transform-origin: left;
     transform: scaleX(1);
 }
