--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -19,7 +19,7 @@
   @include respond-to("m-large") {
     flex-direction: row; /* Horizontal nav on desktop */
     align-items: center;
-    padding: 15px 0;
+    padding: 30px 0;
 
     .nav-toggle {
       display: none; /* Hide nav toggle on desktop */
@@ -97,7 +97,7 @@
     border: none;
 
     .menu-link {
-      padding: 1rem;
+      padding: 0.5rem 1rem;
       min-width: 5rem;
       border-radius: 4px;
       justify-content: center;
@@ -124,6 +124,7 @@
   }
 
   .menu-link {
+    padding: 1rem;
     font-weight: initial;
     justify-content: flex-start;
 
