install tina + add doc

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,6 +7,7 @@
 <section class="generic-single">
   <div class="single-container markdown">
     {{ .Content }}
+      <!-- Edit current page -->
   </div>
 </section>
 {{ end }}
