static as asset dir

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -53,7 +53,7 @@
 <div class="slider">
   <div class="slide-track">
     {{ $screenshots := (.Site.GetPage "/screenshots").Resources }}
-    {{$o := resources.Match "images/screenshots/*.png"}}
+    {{$o := resources.Match "uploads/screenshots/*.png"}}
     {{range $o}}
     {{$o_alter := .Resize "600x webp q50"}}
     <a href="{{.RelPermalink}}"><img class="caroussel-img slide" src="{{.}}" href='{{.}}'></a>
