--- a/layouts/partials/posts/toc.html
+++ b/layouts/partials/posts/toc.html
@@ -2,7 +2,7 @@
 {{ if .Params.toc }}
   <aside class="toc">
     <div id="js-toc-toggle">
-      <h2 class="toc-header">Table of Contents</h2>
+      <h2 class="toc-header">Table de contenu</h2>
       <span class="toc-drop-icon">&blacktriangledown;</span>
     </div>
     <div id="js-toc-contents" class="toc-contents">{{ .TableOfContents }}</div>
