--- a/assets/scss/components/_markdown.scss
+++ b/assets/scss/components/_markdown.scss
@@ -6,6 +6,11 @@
     height: auto;
   }
 
+  p img{    
+    display: flex;
+    margin: auto;
+  }
+
   figure {
     margin-left: 0;
     margin-right: 0;
