--- a/layouts/index.html
+++ b/layouts/index.html
@@ -54,7 +54,7 @@
   {{/*  Shortcodes from page content  */}}
   <section>
   
-    <h2>Les screens de l'équipe</h2>
+    <h2>{{.Site.Params.screeenshotTitle}}</h2>
 <div class="slider">
   <div class="slide-track">
     {{ $screenshots := (.Site.GetPage "/screenshots").Resources }}
